# accumulate

./: Cargo.toml  clippy.toml
.helix/: languages.toml
src/: accumulate.rs  accumulated.rs  combine.rs  default.rs  keep_results.rs  lib.rs  saturating_sum.rs  strategy.rs  sum.rs  total.rs  widen.rs  wrapper_item.rs  wrapping_sum.rs
